--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/jLWZyepYv" method="post">
+        <form action="https://submit-form.com/K9MhM8oUK" method="post">
             <input type="hidden" name="_redirect" value="https://sub-pass-here.vercel.app/"/>
             <div id="root">
                 <div>
